created levels container

--- a/.theia/settings.json
+++ b/.theia/settings.json
@@ -19,5 +19,9 @@
       "**/core.mongo*": true,
       "**/core.python*": true,
    },
-   "emmet.extensionsPath": ".theia"
+"emmet.extensionsPath": ".theia",
+"cSpell.ignoreWords": [
+    "dougal",
+    "pycache"
+]
 }
